2002-09-27  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/widgets/paint-selector.c (sp_paint_selector_get_gradient_position_floatv): Set radial

	* src/libnr/nr-pixblock-pixel.c (nr_compose_pixblock_pixblock_pixel): Kill
	division by zero, if fg and bg are both fully transparent

	* src/dialogs/fill-style.c (sp_fill_style_widget_update): Implement radial
	(sp_fill_style_widget_paint_dragged): Ditto
	(sp_fill_style_widget_paint_changed): Ditto

	* src/sp-gradient.c (sp_radialgradient_set_position): New method

	* src/gradient-chemistry.c (sp_gradient_ensure_radial_private_normalized): New method
	(sp_gradient_get_radial_private_normalized): Ditto
	(sp_item_force_fill_radialgradient_vector): Ditto
	(sp_item_force_stroke_radialgradient_vector): Ditto

2002-09-27  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/widgets/paint-selector.c (sp_paint_selector_set_gradient_radial): New method

	* src/widgets/gradient-position.c (sp_gradient_position_set_mode): New method
	(sp_gradient_position_update): Setup linear/radial renderer as needed

	* src/widgets/gradient-selector.c (sp_gradient_selector_set_mode): New method
	(sp_gradient_selector_set_lgradient_position): Renamed method
	(sp_gradient_selector_set_rgradient_position): Ditto
	(sp_gradient_selector_get_lgradient_position_floatv): Renamed method
	(sp_gradient_selector_get_rgradient_position_floatv): Ditto

	* src/libnr/nr-pixblock-pixel.c (nr_compose_pixblock_pixblock_pixel): Fixed
	R8G8B8 target to render channels separately

	* src/sp-gradient.c (sp_gradient_from_position_xy): Made gradient method,
	changed signature, added gradientTransform to list
	(sp_gradient_to_position_xy): Ditto

	* src/libnr/nr-pixblock-pixel.c: New file

	* src/libnr/nr-pixblock-pixel.h: New file

	* src/libnr/nr-gradient.c (nr_lgradient_renderer_setup): Use gradientspace
	(nr_lgradient_render_block): Use generic renderer, if no specific one
	(nr_lgradient_render_generic): Implement
