@@ -1,0 +1,81 @@
+/* XPM */
+static char * fill_radial_xpm[] = {
+"24 24 54 1",
+" 	c None",
+".	c #59597D",
+"+	c #C7C7E5",
+"@	c #BCBCDC",
+"#	c #B3B3D4",
+"$	c #ABABCD",
+"%	c #A4A4C6",
+"&	c #9E9EC1",
+"*	c #9A9ABE",
+"=	c #9898BC",
+"-	c #9797BB",
+";	c #BBBBDB",
+">	c #B0B0D1",
+",	c #A6A6C8",
+"'	c #9696BA",
+")	c #9090B4",
+"!	c #8B8BB0",
+"~	c #8888AE",
+"{	c #8787AD",
+"]	c #A5A5C7",
+"^	c #9090B5",
+"/	c #8181A8",
+"(	c #7C7CA3",
+"_	c #7878A0",
+":	c #77779F",
+"<	c #8F8FB4",
+"[	c #8484AA",
+"}	c #7B7BA2",
+"|	c #73739B",
+"1	c #6D6D96",
+"2	c #696993",
+"3	c #686892",
+"4	c #C1C1DF",
+"5	c #6E6E97",
+"6	c #65658F",
+"7	c #5E5E89",
+"8	c #595985",
+"9	c #585884",
+"0	c #B9B9D9",
+"a	c #62628D",
+"b	c #50507D",
+"c	c #4A4A78",
+"d	c #484876",
+"e	c #B3B3D3",
+"f	c #4C4C79",
+"g	c #424271",
+"h	c #3B3B6B",
+"i	c #383868",
+"j	c #ADADCF",
+"k	c #363666",
+"l	c #2C2C5E",
+"m	c #29295B",
+"n	c #AAAACB",
+"o	c #A7A7C9",
+"                        ",
+" ...................... ",
+" .++@#$%&*=-=*&%$#@+++. ",
+" .+;>,&')!~{~!)'&,>;++. ",
+" .@>]*^~/(_:_(/~^*]>@+. ",
+" .#,*<[}|12321|}[<*,#4. ",
+" .$&^[_567898765_[^&$0. ",
+" .%'~}5a9bcdcb9a5}~'%e. ",
+" .&)/|69fghihgf96|/)&j. ",
+" .*!(17bgklmlkgb71(!*n. ",
+" .=~_28chlmmmlhc82_~=o. ",
+" .-{:39dimmmmmid93:{-,. ",
+" .=~_28chlmmmlhc82_~=o. ",
+" .*!(17bgklmlkgb71(!*n. ",
+" .&)/|69fghihgf96|/)&j. ",
+" .%'~}5a9bcdcb9a5}~'%e. ",
+" .$&^[_567898765_[^&$0. ",
+" .#,*<[}|12321|}[<*,#4. ",
+" .@>]*^~/(_:_(/~^*]>@+. ",
+" .+;>,&')!~{~!)'&,>;++. ",
+" .++@#$%&*=-=*&%$#@+++. ",
+" .+++40ejno,onje04++++. ",
+" ...................... ",
+"                        "};
